Use Map.copyOf here
The safety guarantees are essentially the same, but in practice this
prevents us from wrapping an Map.of(...) -generated map (i.e. an
ImmutableMap) in another layer of unmodifiability (i.e. an
UnmodifiableMap).